[package]
name = "identity_actor"
version = "0.1.0"
authors = ["IOTA Identity"]
edition = "2018"
description = "Identtiy Actor Model"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "identity"]
homepage = "https://www.iota.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
thiserror = "1.0"
anyhow = "1.0"

riker = "0.4"

tokio = { version = "0.2", features = ["full"] }
once_cell = "1.4.0"

serde_json = "1.0"
serde = "1.0"

identity_comm = { path = "../identity_comm" }

chronicle-common = { git = "https://github.com/iotaledger/chronicle.rs", branch = "main" }


backtrace = "0.3"
