[package]
name = "identity_actor"
version = "0.1.0"
authors = ["IOTA Identity"]
edition = "2018"
description = "Identtiy Actor Model"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "identity"]
homepage = "https://www.iota.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
anyhow = "1.0"

riker = "0.4"

tokio = { version = "0.2", features = ["full"] }
once_cell = "1.4.0"

identity_comm = { path = "../identity_comm" }

chronicle-common = { git = "https://github.com/iotaledger/chronicle.rs", branch = "main" }

libp2p = {version = "0.28.1", default-features = false, features = ["dns", "identify", "mdns-async-std", "mplex", "noise", "request-response", "tcp-async-std", "yamux", "websocket"]}
prost = {version = "0.6.1", default-features = false, features = ["prost-derive"] }
regex = "1.3.9"
thiserror = "1.0.21"
serde = { version = "1.0.117", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.59", default-features = false, features = ["alloc"] }

stronghold-communication = { git = "https://github.com/iotaledger/stronghold.rs", branch = "feat-p2p" }


backtrace = "0.3"


