[package]
name = "identity_agent"
version = "0.6.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "A peer-to-peer communication framework for building digital agents on IOTA identity"

[dependencies]
async-trait = { version = "0.1", default-features = false }
dashmap = { version = "5.1", default-features = false }
futures = { version = "0.3", default-features = false }
identity_core = { version = "=0.6.0", path = "../identity_core", default-features = false }
# TODO: Remove features when this crate can be used without them.
identity_iota_client = { version = "=0.6.0", path = "../identity_iota_client", default-features = false, features = ["async", "revocation-bitmap"] }
identity_iota_core = { version = "=0.6.0", path = "../identity_iota_core", default-features = false }
libp2p = { version = "0.45", default-features = false, features = ["tcp-tokio", "dns-tokio", "websocket", "request-response", "noise", "yamux"] }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.15", default-features = false, features = ["rt", "time"] }
uuid = { version = "0.8", default-features = false, features = ["v4", "serde"] }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
libp2p = { version = "*", features = ["wasm-bindgen", "wasm-ext", "wasm-ext-websocket"] }
uuid = { version = "*", features = ["wasm-bindgen"] }

[dev-dependencies]
criterion = { version = "0.3", default-features = false, features = ["stable"] }
# TODO: Remove features when this crate can be used without them.
identity_account = { version = "=0.6.0", path = "../identity_account", default-features = false, features = ["send-sync-storage", "encryption"] }
pretty_env_logger = { version = "0.4", default-features = false }

[[bench]]
name = "remote_account_benchmark"
harness = false

[[bench]]
name = "agent_benchmark"
harness = false
