[package]
name = "identity_agent"
version = "0.7.0-alpha.5"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle", "identity", "p2p", "agent"]
license.workspace = true
publish = false
readme = "./README.md"
repository.workspace = true
description = "A peer-to-peer communication framework for building SSI agents on IOTA Identity"

[dependencies]
async-trait = { version = "0.1", default-features = false }
dashmap = { version = "5.3", default-features = false }
futures = { version = "0.3", default-features = false }
identity_core = { version = "=0.7.0-alpha.5", path = "../identity_core", default-features = false }
libp2p = { version = "0.45", default-features = false, features = ["tcp-tokio", "dns-tokio", "websocket", "request-response", "noise", "yamux"] }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json.workspace = true
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.21", default-features = false, features = ["rt", "time"] }
uuid = { version = "0.8", default-features = false, features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.3", default-features = false, features = ["stable"] }
identity_iota_core = { path = "../identity_iota_core", default-features = false }
pretty_env_logger = { version = "0.4", default-features = false }
rand = "0.8.5"
tokio = { version = "*", default-features = false, features = ["sync", "macros"] }

[[bench]]
name = "agent"
harness = false

[[bench]]
name = "didcomm"
harness = false
