[package]
name = "identity_communication"
version = "0.1.0"
authors = ["IOTA Identity"]
edition = "2018"
description = "A DID communication library"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "identity"]
homepage = "https://www.iota.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# error handling
thiserror = "1.0"
anyhow = "1.0"

# identity
identity_core = { path = "../identity_core" }

chacha20poly1305 = "0.6.0"
base64 = "0.12.3"