[package]
name = "identity_core"
version = "0.7.0-alpha.6"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle", "identity"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
rust-version.workspace = true
description = "The core traits and types for the identity-rs library."

[dependencies]
multibase = { version = "0.9", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
strum = { version = "0.24.0", default-features = false, features = ["std", "derive"] }
thiserror = { version = "1.0", default-features = false }
time = { version = "0.3.5", default-features = false, features = ["std", "serde", "parsing", "formatting"] }
url = { version = "2.2", default-features = false, features = ["serde"] }
zeroize = { version = "1.4", default-features = false }

[dependencies.iota-crypto]
version = "0.18"
default-features = false
features = ["ed25519", "random", "sha", "x25519", "std"]

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
js-sys = { version = "0.3.55", default-features = false }

[dev-dependencies]
proptest = { version = "1.0.0" }
quickcheck = { version = "1.0" }
quickcheck_macros = { version = "1.0" }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
